--- a/watch/FIF_Watch/app/src/main/res/values/strings.xml
+++ b/watch/FIF_Watch/app/src/main/res/values/strings.xml
@@ -21,4 +21,14 @@
     <string name="warning_text">%1$s는 %2$s에\n좋지 않습니다</string>
     <string name="timer_list">타이머 목록</string>
     <string name="timer_list_to_detail_icon">타이머 세부 화면 이동 아이콘</string>
+    <string name="btn_timer_back">이전 타이머 버튼</string>
+    <string name="btn_timer_forward">다음 타이머 버튼</string>
+    <string name="btn_timer_reset">타이머 초기화 버튼</string>
+    <string name="btn_timer_list">타이머 리스트 버튼</string>
+    <string name="btn_timer_to_recipe">타이머에서 레시피 단계로 이동 버튼</string>
+    <string name="btn_timer_play">타이머 시작 버튼</string>
+    <string name="background_image">배경 이미지</string>
+    <string name="timer_done_icon">타이머 완료 아이콘</string>
+    <string name="timer_done_text">%1$s 완료</string>
+    <string name="btn_timer_done">타이머 완료 확인 버튼</string>
 </resources>
