--- a/android/FIF_Android/app/src/main/res/values/strings.xml
+++ b/android/FIF_Android/app/src/main/res/values/strings.xml
@@ -30,6 +30,10 @@
     <string name="text_go_to_shopping_list">쇼핑 리스트</string>
     <string name="text_saved_recipe">저장한 레시피</string>
     <string name="text_completed_food">완료한 요리</string>
+    <string name="text_recipe_recommend_title">당신을 위한 레시피</string>
+    <string name="text_recipe_list">레시피 둘러보기</string>
+    <string name="text_recipe_gpt">레시피 생성하기</string>
+    <string name="text_go_to_recipe_list">레시피 보러가기</string>
 
     <string name="description_btn_go_back">뒤로가기 버튼</string>
     <string name="description_btn_bookmark">북마크 버튼</string>
@@ -46,4 +50,6 @@
     <string name="description_shopping_list_icon">쇼핑 리스트 수정 아이콘</string>
     <string name="description_recipe_img">레시피 이미지</string>
     <string name="description_ingredient_img">식재료 이미지</string>
+    <string name="description_recipe_list_icon">레시피 둘러보기 아이콘</string>
+    <string name="description_recipe_gpt_icon">레시피 생성하기 아이콘</string>
 </resources>
