--- a/watch/FIF_Watch/app/src/main/res/values/strings.xml
+++ b/watch/FIF_Watch/app/src/main/res/values/strings.xml
@@ -33,5 +33,8 @@
     <string name="btn_timer_done">타이머 완료 확인 버튼</string>
     <string name="notification_timer_done_title">타이머 완료</string>
     <string name="notification_timer_done_content">타이머가 완료되었습니다</string>
+    <string name="notification_recipe_step_title">레시피 단계 이동</string>
+    <string name="notification_recipe_step_content">레시피 단계가 이동되었습니다</string>
     <string name="text_user_name">%1$s님</string>
+    <string name="description_warning_ingredient_icon">위험 식재료 아이콘</string>
 </resources>
