--- a/android/FIF_Android/app/src/main/res/values/strings.xml
+++ b/android/FIF_Android/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="text_add_ingredient_btn">재료 추가하기</string>
     <string name="text_add_ingredient_title">재료를 추가해주세요</string>
     <string name="text_remove_ingredient_title">삭제할 재료를 선택해 주세요</string>
+    <string name="text_exit_app">뒤로가기 버튼을 한번 더 누르면 종료됩니다</string>
 
     <string name="description_btn_go_back">뒤로가기 버튼</string>
     <string name="description_btn_bookmark">북마크 버튼</string>
