[Android] Fix #55: 추천 레시피 오류 수정

--- a/android/FIF_Android/app/src/main/res/values/strings.xml
+++ b/android/FIF_Android/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="text_dislike_ingredient_setting_hint">이러한 재료는 피하고 싶어요</string>
     <string name="text_illness">지병</string>
     <string name="text_illness_setting_hint">이러한 지병을 갖고 있어요</string>
-    <string name="text_health_title">안녕하세요 %1$s님</string>
+    <string name="text_health_title">안녕하세요. %1$s님</string>
     <string name="text_recipe_name">레시피명</string>
     <string name="text_recipe_preference_title">레시피 선호도</string>
     <string name="text_recipe_preference_setting_title">레시피 선호도 설정</string>
@@ -62,6 +62,7 @@
     <string name="text_remove_ingredient_title">삭제할 재료를 선택해 주세요</string>
     <string name="text_exit_app">뒤로가기 버튼을 한번 더 누르면 종료됩니다</string>
     <string name="text_no_recipe_history">해당 레시피의 요리 기록이 없습니다</string>
+    <string name="text_no_recommend_recipe">추천 레시피가 없습니다</string>
 
     <string name="description_btn_go_back">뒤로가기 버튼</string>
     <string name="description_btn_bookmark">북마크 버튼</string>
