--- a/watch/FIF_Watch/app/src/main/res/values/strings.xml
+++ b/watch/FIF_Watch/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Freezia</string>
+    <string name="app_name">FREEZIA</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
